--- a/index.html
+++ b/index.html
@@ -1,8 +1,39 @@
-<script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io.connect('http://localhost:8080');
-  socket.on('news', function (data) {
-    console.log(data);
-    socket.emit('my other event', { my: 'data' });
-  });
+<script src="/socket.io/socket.io.js" type="text/javascript"></script>
+<script src="http://localhost/static/mootools.js" type="text/javascript"></script>
+<script src="http://localhost/static/md5.js" type="text/javascript"></script>
+<script type="text/javascript">
+	var socket = io.connect('http://localhost:8080');
+
+	socket.on('data', function(data) {
+		console.log(data);
+	});
+
+	socket.on('error', function(error) {
+		console.warn(error);
+	});
+
+	socket.on('create_user_success', function(data) {
+		console.log('User Created');
+	});
+
+	socket.on('read_user_success', function(data) {
+		console.log(data);
+	});
+
+	function create_user(username, password) {
+		socket.emit('create_user', {
+			username : username,
+			password : md5(password)
+		});
+	}
+
+	function read_user(username) {
+		socket.emit('read_user', {
+			username : username,
+		});
+	}
+
+	function delete_users() {
+		socket.emit('delete_users');
+	}
 </script>
